--- a/JustMovedGit/Resources/layout/Main.axml
+++ b/JustMovedGit/Resources/layout/Main.axml
@@ -6,8 +6,19 @@
     android:minWidth="25px"
     android:minHeight="25px">
     <Button
-        android:text="Button"
+        android:text="Store Data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/button1" />
+        android:id="@+id/storeDataBtn" />
+    <Button
+        android:text="Get Data"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/getDataBtn" />
+    <TextView
+        android:text="Display data text"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/dataTxt" />
 </LinearLayout>
