--- a/JustMovedGit/Resources/layout/ReceptenMenuView.axml
+++ b/JustMovedGit/Resources/layout/ReceptenMenuView.axml
@@ -5,14 +5,8 @@
     android:layout_height="match_parent"
     android:minWidth="25px"
     android:minHeight="25px">
-    <Button
-        android:text="Store Data"
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/storeDataBtn" />
-    <Button
-        android:text="Get Data"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/getDataBtn" />
+        android:layout_height="match_parent"
+        android:id="@+id/menuList" />
 </LinearLayout>
