--- a/JustMovedGit/Resources/layout/ReceptenView.axml
+++ b/JustMovedGit/Resources/layout/ReceptenView.axml
@@ -5,14 +5,10 @@
     android:layout_height="match_parent"
     android:minWidth="25px"
     android:minHeight="25px">
-    <Button
-        android:text="Store Data"
+    <TextView
+        android:text="Small Text"
+        android:textAppearance="?android:attr/textAppearanceSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/storeDataBtn" />
-    <Button
-        android:text="Get Data"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/getDataBtn" />
+        android:id="@+id/dataTxt" />
 </LinearLayout>
