Done voor vandaag.

--- a/JustMovedGit/Resources/layout/ReceptenView.axml
+++ b/JustMovedGit/Resources/layout/ReceptenView.axml
@@ -4,11 +4,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:minWidth="25px"
-    android:minHeight="25px">
-    <TextView
-        android:text="Small Text"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/dataTxt" />
-</LinearLayout>
+    android:minHeight="25px" />
