--- a/JustMovedGit/Resources/layout/MenuListview.axml
+++ b/JustMovedGit/Resources/layout/MenuListview.axml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="50px"
+    android:layout_height="215px"
     android:weightSum="100"
     android:paddingLeft="30px"
     android:paddingTop="15px">
     <TextView
-        android:id="@+id/txtReceptNaam"
+        android:id="@+id/txtTitel"
         android:text="First Name"
-        android:layout_height="match_parent"
+        android:layout_height="75px"
         android:layout_width="match_parent"
         android:layout_weight="25"
+        android:textSize="50px"
         android:textColor="#ffffff" />
     <TextView
-        android:id="@+id/txtReceptKosten"
+        android:id="@+id/txtSubTitel"
         android:text="Last Name"
-        android:layout_height="match_parent"
+        android:layout_height="50px"
         android:layout_width="match_parent"
         android:layout_weight="25"
+        android:textSize="25px"
         android:textColor="#ffffff" />
 </LinearLayout>
