--- a/JustMovedGit/Resources/layout/MenuView.axml
+++ b/JustMovedGit/Resources/layout/MenuView.axml
@@ -2,12 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/white">
     <EditText
         android:hint="Zoek"
         android:layout_width="match_parent"
         android:layout_height="150px"
-        android:id="@+id/searchBar" />
+        android:id="@+id/searchBar"
+        android:background="#092B5B"
+        android:textColor="#FFFFFF" />
     <LinearLayout
         android:orientation="vertical"
         android:minWidth="25px"
