--- a/JustMovedGit/Resources/layout/ReceptMenuListview.axml
+++ b/JustMovedGit/Resources/layout/ReceptMenuListview.axml
@@ -2,24 +2,31 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="215px"
+    android:layout_height="190px"
     android:weightSum="100"
     android:paddingLeft="30px"
-    android:paddingTop="15px">
+    android:paddingRight="30px"
+    android:paddingTop="15px"
+    android:background="@android:color/white">
     <TextView
         android:id="@+id/txtTitel"
-        android:text="First Name"
+        android:text="Titel"
         android:layout_height="75px"
         android:layout_width="match_parent"
         android:layout_weight="25"
         android:textSize="50px"
-        android:textColor="#ffffff" />
+        android:textColor="#092B5B" />
     <TextView
         android:id="@+id/txtSubTitel"
-        android:text="Last Name"
-        android:layout_height="50px"
+        android:text="Sub titel"
+        android:layout_height="90px"
         android:layout_width="match_parent"
         android:layout_weight="25"
         android:textSize="25px"
-        android:textColor="#ffffff" />
+        android:textColor="#33588c" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5px"
+        android:background="#092B5B"
+        android:id="@+id/view1" />
 </LinearLayout>
