Auto stash before merge of "master" and "origin/master"

--- a/JustMovedGit/Resources/layout/HuishoudenView.axml
+++ b/JustMovedGit/Resources/layout/HuishoudenView.axml
@@ -25,25 +25,25 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/linearLayout1">
                 <TextView
-                    android:text="Titel"
+                    android:text="Beschrijving"
                     android:textSize="65px"
                     android:layout_width="600px"
                     android:layout_height="wrap_content"
-                    android:id="@+id/txtReceptTitel"
+                    android:id="@+id/txtHuishoudenBeschrijving"
                     android:textColor="#092B5B" />
                 <ImageButton
                     android:layout_width="100px"
                     android:layout_height="100px"
                     android:src="@drawable/favorieten"
-                    android:id="@+id/favorietenReceptBtn"
+                    android:id="@+id/favorietenHuishoudenBtn"
                     android:background="?android:attr/selectableItemBackgroundBorderless"
                     android:scaleType="fitCenter" />
             </LinearLayout>
             <TextView
-                android:text="Beschrijving"
+                android:text="Categorie"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/txtReceptBeschrijving"
+                android:id="@+id/txtHuishoudenCategorie"
                 android:textColor="#33588c" />
             <View
                 android:layout_width="match_parent"
@@ -51,10 +51,10 @@
                 android:background="#092B5B"
                 android:id="@+id/view1" />
             <TextView
-                android:text="Bereidingstijd"
+                android:text="Benodigdheden"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/txtReceptBereidingstijd"
+                android:id="@+id/txtHuishoudenBenodigdheden"
                 android:textColor="#33588c" />
             <View
                 android:layout_width="match_parent"
@@ -62,39 +62,16 @@
                 android:background="#092B5B"
                 android:id="@+id/view1" />
             <TextView
-                android:text="Ingredienten"
+                android:text="Handeling"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/txtReceptIngredienten"
+                android:id="@+id/txtHuishoudenHandeling"
                 android:textColor="#33588c" />
             <View
                 android:layout_width="match_parent"
                 android:layout_height="5px"
                 android:background="#092B5B"
                 android:id="@+id/view1" />
-            <TextView
-                android:text="Voorbereiding"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/txtReceptVoorbereiding"
-                android:textColor="#33588c" />
-            <TextView
-                android:text="Bereidingswijze"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/txtReceptBereidingswijze"
-                android:textColor="#33588c" />
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="5px"
-                android:background="#092B5B"
-                android:id="@+id/view1" />
-            <TextView
-                android:text="kosten"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/txtReceptKosten"
-                android:textColor="#33588c" />
         </TableLayout>
     </ScrollView>
 </LinearLayout>
