--- a/JustMovedGit/Resources/layout/BudgetInvoerView.axml
+++ b/JustMovedGit/Resources/layout/BudgetInvoerView.axml
@@ -31,7 +31,9 @@
                 android:layout_height="100px"
                 android:id="@+id/BudgetInputEditText"
                 android:background="#ECF0F1"
-                android:textColor="#092B5B" />
+                android:textColor="#092B5B"
+                android:inputType="none|numberDecimal|number"
+                android:numeric="decimal|integer" />
             <View
                 android:layout_width="match_parent"
                 android:layout_height="5px"
